# synthetic-mid-training

./: .gitignore  .gitmodules
data/: download_pubmed.py  parse_pubmed_baseline.py  parse_pubmed_baseline_v2.py  split_pmc_dataset.py  test_pubmed_parser.py
data/deprecated/: README_PUBMED.md  filter_pubmed.py  parse_pubmed_baseline.py  pubmed_simple_pipeline.py  pyproject.toml  query_pubmed.py  test_parallel.py  test_parallel_64.py  test_pipeline.py
data/pubmed_kg/: PKG2_links.txt  download_pkg2.py  test_download_pkg2.py
eval/: SETUP.md  requirements.txt
eval/benchmarks/: benchmark.py  gpqa.py  labbench.py  medmcqa.py  medqa_usmle.py  mmlu.py  mmlu_pro.py  mmlu_redux.py  supergpqa.py  wmdp.py
eval/config/: config.yaml
eval/config/benchmarks/: benchmarks.yaml
eval/config/model/: qwen_think.yaml
eval/lm_eval/: run_eval.py
eval/scripts/: run_eval.sh
eval/tasks/gpqa/: gpqa.py
notebooks/: benchmarks.ipynb  raw datasets.ipynb
